# sibyl

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: settings.py
scripts/: download_data.py  run_backtest.py  run_paper.py  smoke_test.py
src/: alpaca_client.py  engine.py
src/backtest/: metrics.py  runner.py  simulated_broker.py
src/orders/: manager.py  models.py
src/portfolio/: manager.py  models.py  reporter.py
src/strategies/: base.py  buy_and_hold.py  ma_crossover.py  rsi.py
tests/: test_backtest_metrics.py  test_portfolio_manager.py  test_simulated_broker.py
